[gd_scene load_steps=22 format=3 uid="uid://bjg21ygjiqxou"]

[ext_resource type="Texture2D" uid="uid://cdtv3jcswu0ad" path="res://art/left-arrow.png" id="1_8ywga"]
[ext_resource type="Script" uid="uid://b0xprnx4cxeld" path="res://script/touch_controls.gd" id="1_cx18e"]
[ext_resource type="Texture2D" uid="uid://bqr7e7tjqxf40" path="res://art/sword.png" id="2_cx18e"]
[ext_resource type="Texture2D" uid="uid://h8o3yxkpgn82" path="res://art/speed.png" id="4_gmaj2"]
[ext_resource type="Texture2D" uid="uid://c4d750n7vg2w7" path="res://art/pause.png" id="5_bwiib"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="6_nito4"]
[ext_resource type="Texture2D" uid="uid://brj1q1al7gv8k" path="res://art/brightness.png" id="6_pl8x0"]
[ext_resource type="Script" uid="uid://c06whmj2kf2eb" path="res://script/audio_control.gd" id="7_nito4"]
[ext_resource type="FontFile" uid="uid://dk3lsqxh1ie8c" path="res://fonts/retro_pixel/Retro Pixel.otf" id="8_nr1lh"]
[ext_resource type="FontFile" uid="uid://b3rp4e5tkfkst" path="res://fonts/press_start_2p/PressStart2P.ttf" id="9_fqcvx"]
[ext_resource type="Texture2D" uid="uid://dymvk1ksssdax" path="res://art/MAIN MENU.png" id="10_kfhhv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_genjj"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_8eo88"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_kfhhv"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nito4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_pl8x0"]
bg_color = Color(0.6, 0.6, 0.6, 0.392157)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(1, 0.823529, 0, 0.313726)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nr1lh"]
bg_color = Color(0.6, 0.6, 0.6, 0.392157)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(0, 0, 0.933333, 0.313726)
shadow_size = 10

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_fqcvx"]
bg_color = Color(0.6, 0.6, 0.6, 0.690196)
border_color = Color(0.8, 0.8, 0.8, 0)
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4
shadow_color = Color(1, 0, 0, 0.313726)
shadow_size = 10

[sub_resource type="StyleBoxLine" id="StyleBoxLine_kfhhv"]
color = Color(0.980104, 0.87028, 0.863563, 1)
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_genjj"]
color = Color(1, 0.21268, 0.159696, 1)
thickness = 5

[sub_resource type="StyleBoxLine" id="StyleBoxLine_8eo88"]
color = Color(1, 0.211765, 0.160784, 1)
thickness = 5

[node name="TouchControls" type="CanvasLayer"]
script = ExtResource("1_cx18e")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Control" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.092
anchor_top = 0.808
anchor_right = 0.092
anchor_bottom = 0.808
offset_left = -65.76
offset_top = -65.76
offset_right = 65.24
offset_bottom = 65.24

[node name="left" type="TouchScreenButton" parent="Control/Control"]
scale = Vector2(0.242187, 0.238281)
texture_normal = ExtResource("1_8ywga")
action = "left"

[node name="Control2" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.225
anchor_top = 0.792
anchor_right = 0.225
anchor_bottom = 0.792
offset_left = -70.0
offset_top = -63.2401
offset_right = 69.0
offset_bottom = 63.7599

[node name="right" type="TouchScreenButton" parent="Control/Control2"]
position = Vector2(129, 125)
rotation = 3.14159
scale = Vector2(0.245703, 0.235322)
texture_normal = ExtResource("1_8ywga")
action = "right"

[node name="Control3" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.732
anchor_top = 0.801
anchor_right = 0.732
anchor_bottom = 0.801
offset_left = -63.9601
offset_top = -62.72
offset_right = 65.0399
offset_bottom = 62.28

[node name="jump" type="TouchScreenButton" parent="Control/Control3"]
position = Vector2(125, -0.142029)
rotation = 1.5708
scale = Vector2(0.242242, 0.245702)
texture_normal = ExtResource("1_8ywga")
action = "jump"

[node name="Control4" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.88
anchor_top = 0.698
anchor_right = 0.88
anchor_bottom = 0.698
offset_left = -67.4
offset_top = -67.56
offset_right = 67.6
offset_bottom = 67.44

[node name="atk" type="TouchScreenButton" parent="Control/Control4"]
position = Vector2(4, 0)
scale = Vector2(0.244141, 0.251953)
texture_normal = ExtResource("2_cx18e")
action = "z"

[node name="Control5" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.739
anchor_top = 0.567
anchor_right = 0.739
anchor_bottom = 0.567
offset_left = -72.92
offset_top = -65.24
offset_right = 73.08
offset_bottom = 65.76

[node name="dash" type="TouchScreenButton" parent="Control/Control5"]
scale = Vector2(0.244141, 0.251953)
texture_normal = ExtResource("4_gmaj2")
action = "dash"

[node name="Control6" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.937
anchor_top = 0.104
anchor_right = 0.937
anchor_bottom = 0.104
offset_left = -50.3601
offset_top = -50.88
offset_right = 51.6399
offset_bottom = 51.12

[node name="pause" type="TouchScreenButton" parent="Control/Control6"]
process_mode = 3
position = Vector2(21, 13)
scale = Vector2(0.121094, 0.150391)
texture_normal = ExtResource("5_bwiib")
action = "pause"

[node name="Control7" type="Control" parent="Control"]
layout_mode = 1
anchor_left = 0.878
anchor_top = 0.445
anchor_right = 0.878
anchor_bottom = 0.445
offset_left = -91.8401
offset_top = -20.4
offset_right = 42.1599
offset_bottom = 84.6

[node name="shine" type="TouchScreenButton" parent="Control/Control7"]
process_mode = 3
position = Vector2(13.9999, 6)
scale = Vector2(0.1875, 0.1875)
texture_normal = ExtResource("6_pl8x0")
action = "shine"

[node name="Virtual Joystick" parent="Control" instance=ExtResource("6_nito4")]
layout_mode = 1
anchor_left = 0.132
anchor_top = 0.782
anchor_right = 0.132
anchor_bottom = 0.782
offset_left = -149.96
offset_top = -150.04
offset_right = 150.04
offset_bottom = 149.96

[node name="PauseMenu" type="Control" parent="."]
process_mode = 3
layout_mode = 3
anchor_left = 0.496
anchor_top = 0.494
anchor_right = 0.496
anchor_bottom = 0.494
offset_left = -293.88
offset_top = -220.68
offset_right = 295.12
offset_bottom = 220.32

[node name="Panel" type="Panel" parent="PauseMenu"]
z_index = -1
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="PauseMenu/Panel"]
layout_mode = 1
anchors_preset = -1
anchor_top = 0.101
anchor_right = 1.0
anchor_bottom = 0.101
offset_top = -44.541
offset_bottom = 44.459
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_nr1lh")
theme_override_font_sizes/font_size = 60
text = "Pause"
horizontal_alignment = 1
vertical_alignment = 1

[node name="option" type="Button" parent="PauseMenu/Panel"]
process_mode = 3
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.407
anchor_right = 0.51
anchor_bottom = 0.407
offset_left = -186.5
offset_top = -37.487
offset_right = 192.61
offset_bottom = 37.513
theme_override_colors/font_hover_color = Color(1, 0.756863, 0, 1)
theme_override_colors/font_color = Color(0.960784, 0.960784, 0.960784, 1)
theme_override_colors/font_pressed_color = Color(0.772549, 1, 0, 1)
theme_override_fonts/font = ExtResource("9_fqcvx")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxEmpty_genjj")
text = "Option"
flat = true

[node name="resume" type="Button" parent="PauseMenu/Panel"]
process_mode = 3
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.507
anchor_top = 0.611
anchor_right = 0.507
anchor_bottom = 0.611
offset_left = -192.623
offset_top = -37.451
offset_right = 192.377
offset_bottom = 37.549
theme_override_colors/font_hover_color = Color(1, 0.756863, 0, 1)
theme_override_colors/font_color = Color(0.960784, 0.960784, 0.960784, 1)
theme_override_colors/font_pressed_color = Color(0.772549, 1, 0, 1)
theme_override_fonts/font = ExtResource("9_fqcvx")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxEmpty_8eo88")
text = "Resume"
flat = true

[node name="exit" type="Button" parent="PauseMenu/Panel"]
process_mode = 3
z_index = 1
layout_mode = 1
anchors_preset = -1
anchor_left = 0.51
anchor_top = 0.817
anchor_right = 0.51
anchor_bottom = 0.817
offset_left = -192.39
offset_top = -37.297
offset_right = 192.61
offset_bottom = 37.703
theme_override_colors/font_hover_color = Color(1, 0.756863, 0, 1)
theme_override_colors/font_color = Color(0.960784, 0.960784, 0.960784, 1)
theme_override_colors/font_pressed_color = Color(0.772549, 1, 0, 1)
theme_override_fonts/font = ExtResource("9_fqcvx")
theme_override_font_sizes/font_size = 28
theme_override_styles/focus = SubResource("StyleBoxEmpty_kfhhv")
text = "Exit
"
flat = true

[node name="MainMenu" type="Sprite2D" parent="PauseMenu"]
z_index = -1
position = Vector2(295.5, 188)
scale = Vector2(0.0955015, 0.125615)
texture = ExtResource("10_kfhhv")

[node name="MainMenu2" type="Sprite2D" parent="PauseMenu"]
z_index = -1
position = Vector2(295.5, 278)
scale = Vector2(0.0955015, 0.125615)
texture = ExtResource("10_kfhhv")

[node name="MainMenu3" type="Sprite2D" parent="PauseMenu"]
z_index = -1
position = Vector2(297, 365)
scale = Vector2(0.0626844, 0.125615)
texture = ExtResource("10_kfhhv")

[node name="Options" type="Panel" parent="."]
visible = false
z_index = -1
anchors_preset = -1
anchor_left = 0.506
anchor_top = 0.5
anchor_right = 0.506
anchor_bottom = 0.5
offset_left = -249.68
offset_top = -221.0
offset_right = 249.32
offset_bottom = 221.0

[node name="Label" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 78.0
grow_horizontal = 2
theme_override_fonts/font = ExtResource("8_nr1lh")
theme_override_font_sizes/font_size = 52
text = "Options"
horizontal_alignment = 1
vertical_alignment = 1

[node name="back" type="Button" parent="Options"]
z_index = 1
layout_mode = 2
anchor_left = 0.494
anchor_top = 0.855
anchor_right = 0.494
anchor_bottom = 0.855
offset_left = -100.506
offset_top = -31.91
offset_right = 90.494
offset_bottom = 32.09
size_flags_vertical = 3
theme_override_colors/font_hover_color = Color(1, 0.756863, 0, 1)
theme_override_colors/font_color = Color(0.960784, 0.960784, 0.960784, 1)
theme_override_colors/font_pressed_color = Color(0.772549, 1, 0, 1)
theme_override_fonts/font = ExtResource("9_fqcvx")
theme_override_font_sizes/font_size = 24
theme_override_styles/focus = SubResource("StyleBoxEmpty_nito4")
theme_override_styles/hover = SubResource("StyleBoxFlat_pl8x0")
theme_override_styles/pressed = SubResource("StyleBoxFlat_nr1lh")
theme_override_styles/normal = SubResource("StyleBoxFlat_fqcvx")
text = "Back"
flat = true

[node name="Label2" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.184
anchor_top = 0.158
anchor_right = 0.555
anchor_bottom = 0.258
offset_left = 0.18399
offset_top = 0.163994
offset_right = 2.05499
offset_bottom = -0.0360107
theme_override_fonts/font = ExtResource("8_nr1lh")
theme_override_font_sizes/font_size = 26
text = "Music Volume"
vertical_alignment = 1

[node name="Label4" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.184
anchor_top = 0.339
anchor_right = 0.559
anchor_bottom = 0.439
offset_left = 0.183983
offset_top = 0.161987
offset_right = 0.0589905
offset_bottom = -0.0380249
theme_override_fonts/font = ExtResource("8_nr1lh")
theme_override_font_sizes/font_size = 26
text = "SFX Volume"
vertical_alignment = 1

[node name="Label3" type="Label" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.198
anchor_top = 0.509
anchor_right = 0.559
anchor_bottom = 0.609
offset_left = 0.19799
offset_top = 0.0220032
offset_right = 7.05899
offset_bottom = -0.178009
theme_override_fonts/font = ExtResource("8_nr1lh")
theme_override_font_sizes/font_size = 26
text = "Control"
vertical_alignment = 1

[node name="AudioControl" type="HSlider" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.484
anchor_top = 0.31
anchor_right = 0.484
anchor_bottom = 0.31
offset_left = -153.516
offset_top = -8.02
offset_right = 153.484
offset_bottom = 7.98
theme_override_styles/slider = SubResource("StyleBoxLine_kfhhv")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_genjj")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_8eo88")
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("7_nito4")
audio_bus_name = "Music"

[node name="AudioSoundControl2" type="HSlider" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.484
anchor_top = 0.482
anchor_right = 0.484
anchor_bottom = 0.482
offset_left = -153.516
offset_top = -8.04402
offset_right = 153.484
offset_bottom = 7.95598
theme_override_styles/slider = SubResource("StyleBoxLine_kfhhv")
theme_override_styles/grabber_area = SubResource("StyleBoxLine_genjj")
theme_override_styles/grabber_area_highlight = SubResource("StyleBoxLine_8eo88")
max_value = 1.0
step = 0.05
value = 0.5
script = ExtResource("7_nito4")
audio_bus_name = "SFX"

[node name="ControlChoice" type="OptionButton" parent="Options"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.678
anchor_right = 0.503
anchor_bottom = 0.678
offset_left = -157.5
offset_top = -23.676
offset_right = 159.003
offset_bottom = 23.324
theme_override_fonts/font = ExtResource("9_fqcvx")
theme_override_font_sizes/font_size = 22
selected = 0
item_count = 2
popup/item_0/text = "Button"
popup/item_0/id = 0
popup/item_1/text = "Joystick"
popup/item_1/id = 1

[node name="MainMenu4" type="Sprite2D" parent="Options"]
position = Vector2(242.5, 384)
scale = Vector2(0.0726401, 0.125615)
texture = ExtResource("10_kfhhv")

[connection signal="pressed" from="PauseMenu/Panel/option" to="." method="_on_option_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="PauseMenu/Panel/exit" to="." method="_on_exit_pressed"]
[connection signal="pressed" from="Options/back" to="." method="_on_back_pressed"]
[connection signal="value_changed" from="Options/AudioControl" to="Options/AudioControl" method="_on_value_changed"]
[connection signal="value_changed" from="Options/AudioSoundControl2" to="Options/AudioSoundControl2" method="_on_value_changed"]
